feat: Install mailkit

--- a/dotnet-emailer.csproj
+++ b/dotnet-emailer.csproj
@@ -5,6 +5,7 @@
     <RootNamespace>dotnet_emailer</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="MailKit" Version="4.2.0" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="4.2.0" />
   </ItemGroup>
   <ItemGroup>
